bug fix - Fixed issue where the search results were hidden behind the map in LocationTab

--- a/frontend/src/containers/SideBar/LocationTab/LocationTab.css
+++ b/frontend/src/containers/SideBar/LocationTab/LocationTab.css
@@ -1,5 +1,6 @@
 .location-tab {
   background-color: #FFFFFF;
+  height: 100%;
 }
 .location-tab .location {
   margin-left: 20px;
@@ -16,7 +17,6 @@
   width: calc(100% - 40px);
   height: 350px;
   margin: 20px;
-  z-index: 1;
 }
 .location-tab .box {
   margin: 10px 20px 10px 20px;
@@ -44,8 +44,10 @@
   background-color: #FFFFFF;
   box-shadow: 0px 5px 10px #808080;
   border-radius: 10px;
-  padding: 10px 0px 10px 0px;
   display: none;
+  overflow: hidden;
+  z-index: 10;
+  position: relative;
 }
 .candidate {
   padding: 0px;
@@ -54,5 +56,4 @@
   text-align: left;
   font-size: 16px;
   border: none;
-  display: run-in;
 }
